--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,11 @@
 body{
-    background-image: url('../img/buildings-gf9c182590_1920.jpg');
+    background-image: url('../img/Fondo\ amarillo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 5rem;
     font-family: bangers, comic neue;
-}
+};
 
-h4{
-    background-color: #301ca0;
-    font-family: comic neue;
-    color: antiquewhite;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: 0;
-    margin-right: 0;
-    
-}
+
+
+
