--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 body{
-    background-image: url('../img/Fondo\ amarillo.jpg');
+    background-image: url('../img/Fondo\ rojo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 5rem;
     font-family: bangers, comic neue;
 };
+
 
 
 
